// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Footer > renders copyright 1`] = `
<footer
  class="ds-py-9 ds-text-button-md sm:ds-px-6 print:ds-hidden ds-bg-white ds-text-black"
>
  <div
    class="ds-mx-auto ds-flex ds-flex-col ds-gap-9 sm:ds-max-w-[1090px]"
  >
    <div
      class="ds-mt-9 ds-flex ds-justify-end ds-px-5 sm:ds-px-0"
    >
      © 2024
    </div>
  </div>
</footer>
`;

exports[`Footer > renders footer with dark variant 1`] = `
<footer
  class="ds-py-9 ds-text-button-md sm:ds-px-6 print:ds-hidden ds-bg-black ds-text-white"
>
  <div
    class="ds-mx-auto ds-flex ds-flex-col ds-gap-9 sm:ds-max-w-[1090px]"
  >
    <ul
      class="ds-px-5 sm:ds-px-4"
    >
      <li
        class="ds-px-2 ds-py-[6px]"
      >
        <div>
          Item 1
        </div>
      </li>
      <li
        class="ds-px-2 ds-py-[6px]"
      >
        <div>
          Item 2
        </div>
      </li>
      <li
        class="ds-px-2 ds-py-[6px]"
      >
        <div>
          Item 3
        </div>
      </li>
    </ul>
    <div
      class="ds-flex ds-flex-col ds-gap-6 ds-px-5 sm:ds-flex-row sm:ds-px-0"
    >
      <div>
        Logo 1
      </div>
      <div>
        Logo 2
      </div>
    </div>
    <div
      class="ds-mt-9 ds-flex ds-justify-end ds-px-5 sm:ds-px-0"
    >
      © 2024
    </div>
  </div>
</footer>
`;

exports[`Footer > renders footer with light variant 1`] = `
<footer
  class="ds-py-9 ds-text-button-md sm:ds-px-6 print:ds-hidden ds-bg-white ds-text-black"
>
  <div
    class="ds-mx-auto ds-flex ds-flex-col ds-gap-9 sm:ds-max-w-[1090px]"
  >
    <ul
      class="ds-px-5 sm:ds-px-4"
    >
      <li
        class="ds-px-2 ds-py-[6px]"
      >
        <div>
          Item 1
        </div>
      </li>
      <li
        class="ds-px-2 ds-py-[6px]"
      >
        <div>
          Item 2
        </div>
      </li>
      <li
        class="ds-px-2 ds-py-[6px]"
      >
        <div>
          Item 3
        </div>
      </li>
    </ul>
    <div
      class="ds-flex ds-flex-col ds-gap-6 ds-px-5 sm:ds-flex-row sm:ds-px-0"
    >
      <div>
        Logo 1
      </div>
      <div>
        Logo 2
      </div>
    </div>
    <div
      class="ds-mt-9 ds-flex ds-justify-end ds-px-5 sm:ds-px-0"
    >
      © 2024
    </div>
  </div>
</footer>
`;

exports[`Footer > renders items 1`] = `
<footer
  class="ds-py-9 ds-text-button-md sm:ds-px-6 print:ds-hidden ds-bg-white ds-text-black"
>
  <div
    class="ds-mx-auto ds-flex ds-flex-col ds-gap-9 sm:ds-max-w-[1090px]"
  >
    <ul
      class="ds-px-5 sm:ds-px-4"
    >
      <li
        class="ds-px-2 ds-py-[6px]"
      >
        <div>
          Item 1
        </div>
      </li>
      <li
        class="ds-px-2 ds-py-[6px]"
      >
        <div>
          Item 2
        </div>
      </li>
      <li
        class="ds-px-2 ds-py-[6px]"
      >
        <div>
          Item 3
        </div>
      </li>
    </ul>
  </div>
</footer>
`;

exports[`Footer > renders logos 1`] = `
<footer
  class="ds-py-9 ds-text-button-md sm:ds-px-6 print:ds-hidden ds-bg-white ds-text-black"
>
  <div
    class="ds-mx-auto ds-flex ds-flex-col ds-gap-9 sm:ds-max-w-[1090px]"
  >
    <div
      class="ds-flex ds-flex-col ds-gap-6 ds-px-5 sm:ds-flex-row sm:ds-px-0"
    >
      <div>
        Logo 1
      </div>
      <div>
        Logo 2
      </div>
    </div>
  </div>
</footer>
`;
